# Shelly-ALPM

./: CONTRIBUTING.md  Directory.Build.props  PKGBUILD  PKGBUILD-bin  PKGBUILD-git  Shelly-UI.slnx  _shelly  help_compiler.cs  local-install-de_DE.sh  local-install.sh  shelly.fish  uninstall.sh
.run/: Shelly-UI.run.xml
PackageManager/: PackageManager.csproj  ShellyDatastore.cs
Shelly-CLI/: Program.cs  Shelly-CLI.csproj  ShellyCLIJsonContext.cs  SyncModel.cs
Shelly-CLI.Tests/: InstallLocalPackageTests.cs  QuestionHandlerWarningsTests.cs
Shelly-Notifications/: Program.cs  Shelly-Notifications.csproj
Shelly.Cli/: AlpmProgressTypeMapper.cs  ConfigManager.cs  HtmlToMarkdown.cs  JsonPackFrame.cs  PackageBuilderDiffGenerator.cs  PacmanKeyRunner.cs  Program.cs  QuestionHandler.cs  RootElevator.cs  Shelly.Cli.csproj  ShellyCLIJsonContext.cs  UiFrames.cs
Shelly.Cli.Tests/: InstallClassifyTests.cs  InteractionsTests.cs  PackageSearchScoreTests.cs  Shelly.Cli.Tests.csproj  ShellyFileLogTests.cs  ShortcodeHelpTests.cs  ShortcodeTranslatorTests.cs
Shelly.Gtk/: Program.cs  ServiceBuilder.cs  Shelly.Gtk.csproj  ShellyGtkJsonContext.cs
Shelly.Gtk.Tests/: PkgbuildWarningSerializationTests.cs  QuestionDtoSerializationTests.cs
Shelly.Keys/: Shelly.Keys.csproj  (+1 more)
Shelly.Notifications/: build.sh  meson.build
Shelly.Notifications/po/: de_DE.po  it.po
Shelly.Notifications/src/: app_runner.vala  config_reader.vala  dbus_interfaces.vala  dbus_menu.vala  main.vala  next_notification.vala  notification_handler.vala  shelly_ui_receiver.vala  tray_item.vala  update_service.vala
(+457 files in other folders)
